Archive2/02/92613105a32b3a/output
main.cpp: In member function 'void foo::asd()':
main.cpp:4:19: error: 'bar' was not declared in this scope
   void asd() {bar();}
                   ^
